syntax = "proto3";

option go_package = "escher/private/grpc";

package escher;

message EscherMessage {
  uint32 origin  = 1;
  repeated uint32 destinations = 2;
  string key = 3;
  string value = 4;
}

message EscherMessageResponse {
  string info = 1;
}
